--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,7 @@
 /*hover de los contenedores de 3 actividades*/
 
 img.icono{
-  width: 50em;
+  width: 20em !important;
 }
 a#spiritlink{
   color: black !important;
